GlooGateway/routes/internal-routes.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: main-vs
  namespace: gloo-system
  labels:
    exposure: internal
spec:
  virtualHost:
    domains:
    - '*'                # match any Host header (or use grafana.example.local)
    routes:
    - matchers:
      - prefix: /prometheus
      routeAction:
        single:
          kube:
            ref:
              name: prometheus-server
              namespace: prometheus
            port: 80
    # - matchers:
    #   - prefix: /grafana
    #   routeAction:
    #     single:
    #       upstream:
    #         name: grafana-grafana-80 # Namespace-Service-Port (only when discovery is enabled)
    #         namespace: gloo-system
    - matchers:
      - prefix: /grafana
      routeAction:
        single:
          kube:
            ref:
              name: grafana
              namespace: grafana
            port: 80
